--- a/application/modules/default/views/scripts/explore/partials/user.phtml
+++ b/application/modules/default/views/scripts/explore/partials/user.phtml
@@ -53,7 +53,7 @@ $pageCount = $this->users->count();
             	</div>
 				<div class="col-lg-7" >
                     <img src="<?php echo $helpImage->Image( $this->user['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" style="max-width: 22px; max-height:22px;margin-right: 10px; border-radius: 50%;float: left"/>
-				    <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->user['member_id']); ?>" style="vertical-align:middle;">
+				    <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->user['username']); ?>" style="vertical-align:middle;">
                         <?php echo  $this->user['username']; ?>
                     </a>
 				</div>
