--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -67,7 +67,7 @@
                                         </div>
                                 </div>
                                <div class="feature_text_auth" >
-                               <a  class="auto_link" href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id']); ?>" >
+                               <a  class="auto_link" href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['username']); ?>" >
                                    <figure >
                                        <img src="<?php echo $helpImage->Image($this->product['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" />
                                    </figure>                                        
