--- a/application/modules/default/views/scripts/product/partials/productHeader-old.phtml
+++ b/application/modules/default/views/scripts/product/partials/productHeader-old.phtml
@@ -41,7 +41,7 @@ if (null != ($this->project->image_big)): ?>
                 <div id="product-description">
                     <a href="<?php echo $this->buildExploreUrl($this->project->project_category_id); ?>"><?php echo $this->project->cat_title; ?></a>
                     by <a
-                        href="<?php echo $this->buildMemberUrl($this->member->member_id, 'aboutme'); ?>"><?php echo $this->member->username; ?></a>
+                        href="<?php echo $this->buildMemberUrl($this->member->username, 'aboutme'); ?>"><?php echo $this->member->username; ?></a>
                 </div>
             </div>
             <div class="alignright" id="pling-summary">
