--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -83,7 +83,7 @@ $this->headMeta()->setName('robots', 'noindex, nofollow');
 			<?php foreach ($users as $key => $user) { ?>
 
                 <div class="thumb">
-                    <a href="<?php echo $buildMemberUrl->buildMemberUrl($user['member_id']); ?>" title="<?=$user['profile_image_url']?>">
+                    <a href="<?php echo $buildMemberUrl->buildMemberUrl($user['username']); ?>" title="<?=$user['profile_image_url']?>">
                         <span ></span>
                         <img src="<?php echo $this->Image($user['profile_image_url'],array('width' => 110, 'height' => 110, 'crop' => 2)); ?>"/>
                         
