--- a/application/modules/default/views/scripts/explore/partials/products.phtml
+++ b/application/modules/default/views/scripts/explore/partials/products.phtml
@@ -58,7 +58,7 @@ foreach ($this->products as $this->product) {
        
        <div class="title">
         <b><?php echo $this->product->cat_title?></b>
-        <b class="username small">by <a  href="<?php echo $this->buildMemberUrl($this->product->member_id)?>" 
+        <b class="username small">by <a  href="<?php echo $this->buildMemberUrl($this->product->username)?>" 
                     class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$this->product->member_id?>">
           <?php echo $this->product->username?></a></b>
         </div>
