--- a/application/modules/default/views/scripts/home/partials/users.phtml
+++ b/application/modules/default/views/scripts/home/partials/users.phtml
@@ -27,7 +27,7 @@
         ?>
             <div class="user " >
                 <div class="u-wrap">                
-                    <a href="<?php echo $this->buildMemberUrl($user['member_id']); ?>" class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$user['member_id']?>">
+                    <a href="<?php echo $this->buildMemberUrl($user['username']); ?>" class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$user['member_id']?>">
                         <figure >
                             <img src="<?php echo $this->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
                         </figure>
