--- a/application/modules/default/views/scripts/misuse/list.phtml
+++ b/application/modules/default/views/scripts/misuse/list.phtml
@@ -87,7 +87,7 @@
 
                                 <b style="display: block; margin-bottom: 5px"><?php echo $this->product['cat_title'] ?></b>
                                 <b style="display: block; margin-bottom: 5px" class="small">by 
-                                    <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id']) ?>"><?php echo $this->product['username'] ?></a></b>
+                                    <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['username']) ?>"><?php echo $this->product['username'] ?></a></b>
                                 <?php
                                 if (false === empty($this->product['package_names'])) {
                                     $list_packages = explode(',', $this->product['package_names']);
@@ -144,7 +144,7 @@
                                 <div class="reportInfo">
                                     <b>Reported by 
                                         <?php if(isset($this->product['report_member_id'])) { ?>
-                                        <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['report_member_id']) ?>"><?php echo $this->product['report_username'] ?></a> 
+                                        <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['report_username']) ?>"><?php echo $this->product['report_username'] ?></a> 
                                         <?php } else { ?>
                                         unknown
                                         <?php } ?>
