--- a/application/modules/default/views/scripts/supporterbox/partial/supporterbox.phtml
+++ b/application/modules/default/views/scripts/supporterbox/partial/supporterbox.phtml
@@ -53,7 +53,7 @@ $helperImage = new Default_View_Helper_Image();
                 foreach ($this->supporters as $supporter) { ?>
                     <figure>
                         <a target="_blank"
-                           href="<?php echo $helperBuildMemberUrl->buildMemberUrl($supporter->member_id); ?>"
+                           href="<?php echo $helperBuildMemberUrl->buildMemberUrl($supporter->username); ?>"
                            title="<?php echo $supporter->username; ?>">
                             <img src="<?php echo $supporter->profile_image_url; ?>"
                                  alt="<?php echo $supporter->username; ?>">
