--- a/application/modules/default/views/scripts/user/partials/loopLike.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopLike.phtml
@@ -12,7 +12,7 @@
 	</div>		
 
 	<div class="col-lg-2 col-md-2" style="white-space: nowrap; padding-top: 20px">			
-		 by <a  href="<?php echo $this->buildMemberUrl($this->file->project_member_id); ?>" class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$this->file->project_member_id?>">
+		 by <a  href="<?php echo $this->buildMemberUrl($this->file->project_username); ?>" class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$this->file->project_member_id?>">
 		 <?=$this->file->project_username?></a>
 	</div>
 		    	
