--- a/application/modules/default/views/scripts/user/partials/loopRated.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopRated.phtml
@@ -34,7 +34,7 @@
         </div>      
                     
         <div class="col-lg-2 col-md-2" style="white-space: nowrap; padding-top: 15px">         
-             by <a  href="<?php echo $this->buildMemberUrl($file->project_member_id); ?>" class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$file->project_member_id?>">
+             by <a  href="<?php echo $this->buildMemberUrl($file->project_username); ?>" class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$file->project_member_id?>">
              <?=$file->project_username?></a>
         </div>
 
